--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pg-snap"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -27,3 +27,5 @@ hex = "0.4.3"
 futures = "0.3.28"
 bincode = "1.3.3"
 serde = "1.0.188"
+anyhow = "1.0.75"
+rand = "0.8.5"
