--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,7 @@ bincode = "1.3.3"
 serde = "1.0.188"
 anyhow = "1.0.75"
 rand = "0.8.5"
+sqlx = { version = "0.7.2", features = [
+    "postgres",
+    "runtime-tokio-native-tls",
+] }
