--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio-postgres = { version = "0.7.10", features = [
-    "with-serde_json-1",
-    "with-chrono-0_4",
-    "with-uuid-1",
-    "with-geo-types-0_7",
-] }
 tokio = { version = "1.32.0", features = ["full"] }
 csv = "1.2.2"
 chrono = "0.4.29"
@@ -33,3 +27,5 @@ sqlx = { version = "0.7.2", features = [
     "postgres",
     "runtime-tokio-native-tls",
 ] }
+futures-util = "0.3.29"
+bytecount = "0.6.7"
