--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,45 @@
 name: ci
+
 on:
   pull_request:
   push:
     branches:
-      - main
+      - "*"
   workflow_dispatch:
 
 jobs:
   test:
-    name: test
+    name: Unit Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
         go-version: ["1.21.x"]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Install dependencies
+        run: go get .
+      - name: Build
+        run: go build -v ./...
+      - name: Test
+        run: go test $(go list ./... | grep -v /tests/)
 
+  e2e-test:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.21.x"
-          cache-dependency-path: subdir/go.sum
       - name: Install dependencies
         run: go get .
       - name: Build
         run: go build -v ./...
-      - name: Test
-        run: go test ./...
+      - name: E2E Test
+        run: go test ./tests/...
