--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         run: go build -v ./...
       - name: Test
-        run: go test $(go list ./... | grep -v /tests/)
+        run: go test ./...
 
   e2e-test:
     name: E2E Tests
@@ -42,4 +42,4 @@ jobs:
       - name: Build
         run: go build -v ./...
       - name: E2E Test
-        run: go test ./tests/...
+        run: TEST=e2e go test ./tests/...
