--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ colored = "2.1.0"
 bincode = "1.3.3"
 zip = "0.6.6"
 walkdir = "2.5.0"
+prost-build = { version = "0.12.3", features = ["cleanup-markdown"] }
