--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,8 +113,15 @@ jobs:
         with:
           path: target
           key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
-      - run: |
-          sudo apt-get update
-          sudo apt-get install --yes --no-install-recommends postgresql-client-15
+      - name: Install postgres 15
+        if: runner.os != 'macOS'
+        run: |
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/pgdg.asc &>/dev/null
+          sudo apt update
+          sudo apt install postgresql
+      - name: Install postgres 15
+        if: runner.os == 'macOS'
+        run: brew install postgresql@15
       - name: Run Tests
         run: cargo test integration -- --color always
