--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ bincode = "1.3.3"
 zip = "0.6.6"
 walkdir = "2.5.0"
 prost-build = { version = "0.12.3", features = ["cleanup-markdown"] }
+regex = "1.10.4"
+shlex = "1.3.0"
 
 [dev-dependencies]
 testcontainers-modules = { version = "0.3.5", features = ["postgres"] }
