--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pg-snap"
-version = "0.9.0"
+version = "0.10.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -31,6 +31,7 @@ zip = "0.6.6"
 walkdir = "2.5.0"
 prost-build = { version = "0.12.3", features = ["cleanup-markdown"] }
 regex = "1.10.4"
+chrono = "0.4.38"
 
 [dev-dependencies]
 testcontainers-modules = { version = "0.3.5", features = ["postgres"] }
